--- a/samples/scala/conf/application.conf
+++ b/samples/scala/conf/application.conf
@@ -13,6 +13,9 @@ application.langs="en"
 
 couchbase.bucket="beer-sample"
 
+couchbase.pollfutures=true
+couchbase.polldelay=50
+
 # Global object class
 # ~~~~~
 # Define the Global object class for this application.
