--- a/samples/scala/conf/application.conf
+++ b/samples/scala/conf/application.conf
@@ -20,6 +20,12 @@ couchbase {
     timeout="0"
     pollfutures=true
     polldelay=50
+    execution-context {
+      fork-join-executor {
+        parallelism-factor = 20.0
+        parallelism-max = 200
+      }
+    }
 }
 
 # Global object class
