Update plugin to handle connections to multiple buckets

--- a/samples/scala/conf/application.conf
+++ b/samples/scala/conf/application.conf
@@ -11,22 +11,24 @@ application.secret="P]vUdv;5UZbggq>a7UyV78dYDHa]R0i]W5;O`SkO^ocWUyueaHEdu_RZ4[06
 # ~~~~~
 application.langs="en"
 
-couchbase {
+couchbase-ec {
+  pollfutures=true
+  polldelay=50
+  execution-context {
+    fork-join-executor {
+      parallelism-factor = 20.0
+      parallelism-max = 200
+    }
+  }
+}
+couchbase = [{
     host="127.0.0.1"
     port="8091"
     base="pools"
     bucket="beer-sample"
     pass=""
     timeout="0"
-    pollfutures=true
-    polldelay=50
-    execution-context {
-      fork-join-executor {
-        parallelism-factor = 20.0
-        parallelism-max = 200
-      }
-    }
-}
+}]
 
 # Global object class
 # ~~~~~
