Use different bucket

--- a/samples/scala/conf/application.conf
+++ b/samples/scala/conf/application.conf
@@ -28,6 +28,13 @@ couchbase = [{
     bucket="beer-sample"
     pass=""
     timeout="0"
+}, {
+   host="127.0.0.1"
+   port="8091"
+   base="pools"
+   bucket="default"
+   pass=""
+   timeout="0"
 }]
 
 # Global object class
