--- a/samples/scala/conf/application.conf
+++ b/samples/scala/conf/application.conf
@@ -12,6 +12,7 @@ application.secret="P]vUdv;5UZbggq>a7UyV78dYDHa]R0i]W5;O`SkO^ocWUyueaHEdu_RZ4[06
 application.langs="en"
 
 couchbase-ec {
+  timeout=1000
   pollfutures=true
   polldelay=50
   execution-context {
