Add true sample

--- a/samples/scala/conf/application.conf
+++ b/samples/scala/conf/application.conf
@@ -23,17 +23,24 @@ couchbase-ec {
   }
 }
 couchbase = [{
-    host="127.0.0.1"
-    port="8091"
-    base="pools"
-    bucket="beer-sample"
-    pass=""
-    timeout="0"
+   host="127.0.0.1"
+   port="8091"
+   base="pools"
+   bucket="beer-sample"
+   pass=""
+   timeout="0"
 }, {
    host="127.0.0.1"
    port="8091"
    base="pools"
    bucket="default"
+   pass=""
+   timeout="0"
+}, {
+   host="127.0.0.1"
+   port="8091"
+   base="pools"
+   bucket="people"
    pass=""
    timeout="0"
 }]
