--- a/samples/shorturls/conf/application.conf
+++ b/samples/shorturls/conf/application.conf
@@ -28,7 +28,7 @@ couchbase = [{
    host="127.0.0.1"
    port="8091"
    base="pools"
-   bucket="urls"
+   bucket="default"
    pass=""
    timeout="0"
 }]
