Tweak Akka scheduler

--- a/samples/scala/shorturls/conf/application.conf
+++ b/samples/scala/shorturls/conf/application.conf
@@ -13,10 +13,17 @@ application.langs="en"
 
 application.url.prefix="http://mi.ni/r/"
 
+akka {
+  scheduler {
+    tick-duration = 10ms
+    ticks-per-wheel = 512
+  }
+}
+
 couchbase-ec {
   timeout=1000
   pollfutures=true
-  polldelay=5
+  polldelay=10
   execution-context {
     fork-join-executor {
       parallelism-factor = 20.0
