--- a/samples/java/shorturls/conf/application.conf
+++ b/samples/java/shorturls/conf/application.conf
@@ -75,6 +75,7 @@ logger.root=ERROR
 
 # Logger used by the framework:
 logger.play=INFO
+logger.CouchbasePlugin=INFO
 
 # Logger provided to your application:
 logger.application=DEBUG
