--- a/samples/scala/shorturls/conf/application.conf
+++ b/samples/scala/shorturls/conf/application.conf
@@ -82,6 +82,7 @@ logger.root=ERROR
 
 # Logger used by the framework:
 logger.play=INFO
+logger.CouchbasePlugin=INFO
 
 # Logger provided to your application:
 logger.application=DEBUG
