Allow multiple hosts in config

--- a/samples/scala/shorturls/conf/application.conf
+++ b/samples/scala/shorturls/conf/application.conf
@@ -32,7 +32,7 @@ couchbase-ec {
   }
 }
 couchbase = [{
-   host="127.0.0.1"
+   host=["127.0.0.1","127.0.0.1"]
    port="8091"
    base="pools"
    bucket="default"
