Update Cache conf

--- a/samples/scala/shorturls/conf/application.conf
+++ b/samples/scala/shorturls/conf/application.conf
@@ -13,6 +13,10 @@ application.langs="en"
 
 application.url.prefix="http://mi.ni/r/"
 
+cache.couchbase.bucket="default"
+cache.couchbase.namespace="play-cache."
+cache.couchbase.enable=true
+
 akka {
   scheduler {
     tick-duration = 10ms
