Use new configuration model

--- a/samples/java/shorturls/conf/application.conf
+++ b/samples/java/shorturls/conf/application.conf
@@ -13,25 +13,27 @@ application.langs="en"
 
 application.url.prefix="http://mi.ni/r/"
 
-couchbase-ec {
-  timeout=1000
-  pollfutures=true
-  polldelay=5
+couchbase {
   execution-context {
-    fork-join-executor {
-      parallelism-factor = 20.0
-      parallelism-max = 200
+    timeout=1000
+    pollfutures=true
+    polldelay=5
+    execution-context {
+      fork-join-executor {
+        parallelism-factor = 20.0
+        parallelism-max = 200
+      }
     }
   }
+  servers = [{
+    host="127.0.0.1"
+    port="8091"
+    base="pools"
+    bucket="default"
+    pass=""
+    timeout="0"
+  }]
 }
-couchbase = [{
-   host="127.0.0.1"
-   port="8091"
-   base="pools"
-   bucket="default"
-   pass=""
-   timeout="0"
-}]
 
 
 # Global object class
