--- a/samples/scala/dummy/conf/application.conf
+++ b/samples/scala/dummy/conf/application.conf
@@ -11,39 +11,41 @@ application.secret="P]vUdv;5UZbggq>a7UyV78dYDHa]R0i]W5;O`SkO^ocWUyueaHEdu_RZ4[06
 # ~~~~~
 application.langs="en"
 
-couchbase-ec {
-  timeout=1000
-  pollfutures=true
-  polldelay=50
+couchbase {
   execution-context {
-    fork-join-executor {
-      parallelism-factor = 20.0
-      parallelism-max = 200
+    timeout=1000
+    pollfutures=true
+    polldelay=5
+    execution-context {
+      fork-join-executor {
+        parallelism-factor = 20.0
+        parallelism-max = 200
+      }
     }
   }
+  servers = [{
+     host="127.0.0.1"
+     port="8091"
+     base="pools"
+     bucket="beer-sample"
+     pass=""
+     timeout="0"
+  }, {
+     host="127.0.0.1"
+     port="8091"
+     base="pools"
+     bucket="default"
+     pass=""
+     timeout="0"
+  }, {
+     host="127.0.0.1"
+     port="8091"
+     base="pools"
+     bucket="people"
+     pass=""
+     timeout="0"
+  }]
 }
-couchbase = [{
-   host="127.0.0.1"
-   port="8091"
-   base="pools"
-   bucket="beer-sample"
-   pass=""
-   timeout="0"
-}, {
-   host="127.0.0.1"
-   port="8091"
-   base="pools"
-   bucket="default"
-   pass=""
-   timeout="0"
-}, {
-   host="127.0.0.1"
-   port="8091"
-   base="pools"
-   bucket="people"
-   pass=""
-   timeout="0"
-}]
 
 # Global object class
 # ~~~~~
