--- a/samples/scala/shorturls/conf/application.conf
+++ b/samples/scala/shorturls/conf/application.conf
@@ -13,10 +13,6 @@ application.langs="en"
 
 application.url.prefix="http://mi.ni/r/"
 
-cache.couchbase.bucket="default"
-cache.couchbase.namespace="play-cache."
-cache.couchbase.enable=true
-
 akka {
   scheduler {
     tick-duration = 10ms
@@ -24,25 +20,32 @@ akka {
   }
 }
 
-couchbase-ec {
-  timeout=1000
-  pollfutures=true
-  polldelay=10
+couchbase {
+  cache {
+    bucket="default"
+    namespace="play-cache."
+    enabled=true
+  }
   execution-context {
-    fork-join-executor {
-      parallelism-factor = 20.0
-      parallelism-max = 200
+    timeout=1000
+    pollfutures=true
+    polldelay=5
+    execution-context {
+      fork-join-executor {
+        parallelism-factor = 20.0
+        parallelism-max = 200
+      }
     }
   }
+  servers = [{
+    host=["127.0.0.1","127.0.0.1"]
+    port="8091"
+    base="pools"
+    bucket="default"
+    pass=""
+    timeout="0"
+  }]
 }
-couchbase = [{
-   host=["127.0.0.1","127.0.0.1"]
-   port="8091"
-   base="pools"
-   bucket="default"
-   pass=""
-   timeout="0"
-}]
 
 
 # Global object class
