--- a/samples/scala/shorturls/conf/application.conf
+++ b/samples/scala/shorturls/conf/application.conf
@@ -37,7 +37,7 @@ couchbase {
       }
     }
   }
-  servers = [{
+  buckets = [{
     host=["127.0.0.1","127.0.0.1"]
     port="8091"
     base="pools"
