Good JSON validation management

--- a/samples/scala/shorturls/conf/application.conf
+++ b/samples/scala/shorturls/conf/application.conf
@@ -11,7 +11,7 @@ application.secret=">h7sB5;>^V4OgZx2>VmSW:eYVJi8cjdkHOaCMnd1T_[BdPY]KIbjR`6v0ZY6
 # ~~~~~
 application.langs="en"
 
-application.url.prefix="http://mi.ni/r/"
+application.url.prefix="http://mi.ni:9000/r/"
 
 akka {
   scheduler {
@@ -21,6 +21,9 @@ akka {
 }
 
 couchbase {
+  json {
+    validate=true
+  }
   cache {
     bucket="default"
     namespace="play-cache."
