--- a/samples/scala/orders/conf/application.conf
+++ b/samples/scala/orders/conf/application.conf
@@ -88,6 +88,8 @@ logger.root=ERROR
 # Logger used by the framework:
 logger.play=INFO
 logger.CouchbasePlugin=INFO
+#logger.CouchbaseJournalActor=DEBUG
+#logger.EventStoredTrait=DEBUG
 
 # Logger provided to your application:
 logger.application=DEBUG
