Complete Scala template

--- a/starters/couchbase-scala-starter/conf/application.conf
+++ b/starters/couchbase-scala-starter/conf/application.conf
@@ -77,4 +77,27 @@ couchbase {
     pass=""
     timeout="0"
   }]
+  # cache {
+  #   bucket="default"
+  #   enabled=true
+  #   namespace="play-default-cache."
+  # }
+  # evolutions {
+  #   documents="conf/views"
+  #   default {
+  #       apply = true
+  #       synchronise = true
+  #   }
+  # }
+  # fixtures {
+  #   documents="conf/fixtures"
+  #   default {
+  #     insert = true
+  #     key = "id"
+  #   }
+  # }
+  # n1ql {
+  #   host="127.0.0.1"
+  #   port=8093
+  # }
 }
