--- a/starters/couchbase-java-starter/conf/application.conf
+++ b/starters/couchbase-java-starter/conf/application.conf
@@ -5,7 +5,7 @@
 # ~~~~~
 # The secret key is used to secure cryptographics functions.
 # If you deploy your application to several instances be sure to use the same key!
-application.secret="[TVvK:[vvF?JB4<5A5H0dbHwjU[>2;m`7BaJeMX5qMAk3E0@X?j5iTI?;kxBw]Sg"
+application.secret="VRT:7VuupsInLK7QdTs1bXdrH1b`;;R`/ymrD<g=Hc4lCYxKGlGwJ62Ih6fu<iGC"
 
 # The application languages
 # ~~~~~
@@ -23,9 +23,9 @@ application.langs="en"
 # This router will be looked up first when the application is starting up,
 # so make sure this is the entry point.
 # Furthermore, it's assumed your route file is named properly.
-# So for an application router like `conf/my.application.Router`,
-# you may need to define a router file `my.application.routes`.
-# Default to Routes in the root package (and `conf/routes`)
+# So for an application router like `my.application.Router`,
+# you may need to define a router file `conf/my.application.routes`.
+# Default to Routes in the root package (and conf/routes)
 # application.router=my.application.Routes
 
 # Database configuration
@@ -37,21 +37,11 @@ application.langs="en"
 # db.default.url="jdbc:h2:mem:play"
 # db.default.user=sa
 # db.default.password=""
-#
-# You can expose this datasource via JNDI if needed (Useful for JPA)
-# db.default.jndiName=DefaultDS
 
 # Evolutions
 # ~~~~~
 # You can disable evolutions if needed
 # evolutionplugin=disabled
-
-# Ebean configuration
-# ~~~~~
-# You can declare as many Ebean servers as you want.
-# By convention, the default server is named `default`
-#
-# ebean.default="models.*"
 
 # Logger
 # ~~~~~
@@ -66,7 +56,6 @@ logger.play=INFO
 
 # Logger provided to your application:
 logger.application=DEBUG
-
 
 couchbase {
   execution-context {
@@ -88,4 +77,23 @@ couchbase {
     pass=""
     timeout="0"
   }]
+  # cache {
+  #   bucket="default"
+  #   enabled=true
+  #   namespace="play-default-cache."
+  # }
+  # evolutions {
+  #   documents="conf/views"
+  #   default {
+  #       apply = true
+  #       synchronise = true
+  #   }
+  # }
+  # fixtures {
+  #   documents="conf/fixtures"
+  #   default {
+  #     insert = true
+  #     key = "id"
+  #   }
+  # }
 }
