Support user auth (finally)

--- a/samples/scala/dummy/conf/application.conf
+++ b/samples/scala/dummy/conf/application.conf
@@ -26,6 +26,7 @@ couchbase {
      port="8091"
      base="pools"
      bucket="beer-sample"
+     user=""
      pass=""
      timeout="0"
   }, {
@@ -33,6 +34,7 @@ couchbase {
      port="8091"
      base="pools"
      bucket="default"
+     user=""
      pass=""
      timeout="0"
   }, {
@@ -40,6 +42,7 @@ couchbase {
      port="8091"
      base="pools"
      bucket="people"
+     user=""
      pass=""
      timeout="0"
   }]
